--- a/Task1/css/index.css
+++ b/Task1/css/index.css
@@ -96,3 +96,45 @@
        .fixx{
         position: fixed;
        }
+       .about{
+        display: none;
+        position: fixed;
+        margin-top: 17.5%;
+       margin-left: 31%;
+        border-radius: 10px;
+        width: 350px;
+        height:220px ;
+        background-color: rgb(255, 255, 255);
+       }
+       .about h1{
+        font-weight: bold;
+        padding-top: 25px;
+        text-align: center;
+        font-size:20px;
+       }
+       .about form{
+        text-align: center;
+        padding-top: 10px;
+       }
+       .about p{
+        text-align: center;
+        padding:10px 40px;
+        color: gray;
+        font-size: 13px;
+       }
+       .select{
+        width: 260px;
+       }
+       .toast1{
+        display: none;
+        position: fixed;
+       margin-left: 35%;
+        width: 300px;
+        background-color: rgb(0, 255, 76);
+       }
+       .natiff p{
+        text-align: center;
+       }
+       .toastbody{
+        text-align: center;
+       }
